# Obelisk

./: .Obelisk.cabal.swp  .help.html.swp  .obelisk_report.html.swp  .tracker_db  BUG  Obelisk.cabal  Obelisk.html  README  build.sh  build_runtime.sh  clean.sh  help.html  license_labeller.hs  obelisk.html  obelisk_report.html  permission  runtime.sh  test.sh  test_all.sh  type_test  wc.sh
Language/: .Obelisk.hs.swp  Obelisk.hs
Language/Obelisk/: .AST.hs.swp  .Lexer.hs.swp  .Report.hs.swp  .Test.hs.swp  AST.hs  Emitter.hs  Error.hs  Lexer.hs  Optimizer.hs  Parser.hs  Pretty.hs  Report.hs  Scoper.hs  Test.hs  TypeChecker.hs
Language/Obelisk/AST/: .Types.hs.swp  CodeFragment.hs  Correct.hs  Named.hs  Pretty.hs  Scoped.hs  Simple.hs  Transformer.hs  Types.hs
Language/Obelisk/Interpreter/: .Correct.hs.swp  .Tree.hs.swp  Correct.hs  Tree.hs
Language/Obelisk/Lexer/: .Token.hs.swp  Token.hs
Language/Obelisk/Parser/: .Monad.hs.swp  Monad.hs
Language/Obelisk/TypeChecker/: .Def.hs.swp  .Typed.hs.swp  Block.hs  Def.hs  Def.hs-boot  Expression.hs  Typed.hs
happy/: .hs  .obelisk.info.swp  .obelisk.y.swp  Data.hs  gen.sh  obelisk.info  obelisk.y  obelisk.y.bak
obelisk_report/: header.yaml  intro.yaml  semantics.yaml  style.css  syntax.yaml
obelisk_report/obsyntax/lexical/: reserved.yaml
obelisk_report/semantics/: correct.yaml
obelisk_report/semantics/correct/: scope.yaml  type.yaml
obelisk_report/syntax/: .grammar.yaml.swp  grammar.yaml  lexical.yaml
obelisk_report/syntax/lexical/: reserved.yaml
runtime/: build.sh  build_test.sh  error_test.sh  execution plan  garbage_test.sh  help  memory_test.sh  run_test.sh  test.sh
runtime/include/: bool.h  error.h  executor.h  garbage.h  memory.h  oberror.h  object.h  pointer.h  stack.h
runtime/src/: executor.c  garbage.c  memory.c  object.c  pointer.c  stack.c
runtime/test_out/: error  garbage  garbage_vs_manual  memory
runtime/tests/: error  error.c  garbage.c  garbage_vs_manual.c  memory.c
tests/: .lex.hs.swp  .parse.hs.swp  lex.hs  parse.hs  scope.hs  type.hs
tests/lex/failure/: nonsense
tests/lex/success/: 123_because  block_comment  braces  comment  end_brackets  half_def  let
tests/parse/failure/: missing_brace  missing_bracket  no_type  simple_type  top_level_expression  top_level_let
tests/parse/success/: block_where  def_type  def_where  def_where_type  definition  function_called_defun  if
tests/scope/failure/: constant_see_constant  dup_block_where  inner_def_see_constant  lonesome  other_where  same_top_level  same_where  same_where_arg
tests/scope/success/: argument  block_where  constant_sees_argument  constant_sees_defs  define_sees_self  each_sees_other  first_sees_second  inner_constant  inner_def  inner_def_sees_other_inners  inner_define_sees_argument  inner_inner  (+2 more)
(+33 files in other folders)
