Name:		Obelisk	
Version:	0.0.1
Cabal-Version:  >= 1.2
License:	GPL-3
License-File:	LICENCE
Author:		John Morrice
Category:	Compilers/Interpreters
Synopsis:       An simple object oriented language, with a strongly typed form of duck-typing.
Build-type:	Simple

Library
   Build-Depends: base>=4, parsec>=3, filepath, containers
   Exposed-modules:
      Language.Obelisk
      Language.Obelisk.Lexer
      Language.Obelisk.Lexer.Token
      Language.Obelisk.Parser
      Language.Obelisk.Scoper
      Language.Obelisk.TypeChecker
      Language.Obelisk.Emitter
      Language.Obelisk.Error
      Language.Obelisk.AST
      Language.Obelisk.AST.Simple
      Language.Obelisk.AST.Transformer

Executable lex
   Main-is: tests/lex.hs
   Other-modules:
      Language.Obelisk.Lexer
      Language.Obelisk.Lexer.Token

Executable parse
   Main-is: tests/parse.hs
   Other-modules:
      Language.Obelisk.Parser

Executable scope
   Main-is: tests/scope.hs
   Other-modules:
      Language.Obelisk.Parser
      Language.Obelisk.Scoper
      Language.Obelisk.AST.Scoped 
