Name:		Obelisk	
Version:	0.0.1
Cabal-Version:  >= 1.2
License:	GPL-3
License-File:   COPYING	
Author:		John Morrice
Category:	Compilers/Interpreters
Synopsis:       Obelisk is a general purpose systems programming language.  This package provides the Obelisk report and The Obelisk Compiler.
Build-type:	Simple

Library
   Build-Depends: base>=4, parsec>=3, filepath, directory, containers
   Exposed-modules:
      Language.Obelisk
      Language.Obelisk.Test
      Language.Obelisk.Lexer
      Language.Obelisk.Lexer.Token
      Language.Obelisk.Parser
      Language.Obelisk.Scoper
      Language.Obelisk.TypeChecker
      Language.Obelisk.TypeChecker.Typed
      Language.Obelisk.Emitter
      Language.Obelisk.Error
      Language.Obelisk.Pretty
      Language.Obelisk.AST
      Language.Obelisk.AST.Simple
      Language.Obelisk.AST.Types
      Language.Obelisk.AST.CodeFragment
      Language.Obelisk.AST.Correct
      Language.Obelisk.Interpreter.Tree
      Language.Obelisk.Interpreter.Correct
   Other-modules:
      Language.Obelisk.TypeChecker.Def
      Language.Obelisk.TypeChecker.Expression

Executable lex
   Main-is: tests/lex.hs
   Other-modules:
      Language.Obelisk.Lexer
      Language.Obelisk.Lexer.Token

Executable parse
   Main-is: tests/parse.hs
   Other-modules:
      Language.Obelisk.Parser

Executable scope
   Main-is: tests/scope.hs
   Other-modules:
      Language.Obelisk.Parser
      Language.Obelisk.Scoper

Executable type 
   Main-is: tests/type.hs
   Other-modules:
      Language.Obelisk.TypeChecker
      Language.Obelisk.Scoper
      Language.Obelisk.Parser 
